Removed unused imports + other small cleanup